# andriod-control-mcp

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  analyze_screen.py  build.sh  click_time.py  http_server.py  mcp_android_server.py  pyproject.toml  requirements.txt  screen_control.py  screen_utils.py  start_scrcpy.py  test_uiautomator2.py
.claude/commands/: android-task.md  order-food.md  screen-analyze.md
.claude/xagents/: android-visual-operator.md
src/android_control_mcp/: __init__.py  __main__.py  omniparser.py  screen_utils.py  server.py
src/android_control_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
