[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-control-mcp"
version = "0.1.0"
description = "MCP server for Android device control with screen analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "livoras", email = "livoras@github.com"}
]
requires-python = ">=3.8"
keywords = ["mcp", "android", "automation", "uiautomator2", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "mcp>=1.0.0",
    "uiautomator2>=2.16.0",
    "Pillow>=9.0.0",
    "requests>=2.25.0",
    "flask>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/livoras/andriod-control-mcp"
Repository = "https://github.com/livoras/andriod-control-mcp"
Issues = "https://github.com/livoras/andriod-control-mcp/issues"

[project.scripts]
android-control-mcp = "android_control_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
android_control_mcp = ["*.py"]